# university

4_kurs/Operating_systems/: file.sh
4_kurs/Operating_systems/os2_process/: CMakeLists.txt  a.out  main.c  test_process.txt
4_kurs/Operating_systems/os2_thread/: a.out  get_CPU_time.c  main  main.c  os2.h  test.txt  test_thread.txt
4_kurs/System_programming/: Lab4.rar
4_kurs/System_programming/spl1/: CMakeLists.txt  get_next_line.c  get_next_line.h  main.c  result.txt  result1.txt  spl1.h  text  text1
4_kurs/System_programming/spl1/libft/: ft_cl.c  ft_foreach.c  ft_isascii.c  ft_isprint.c  ft_lstiter.c  ft_lstnew.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_mmap.c  ft_putchar.c  ft_putendl_fd.c  ft_strcat.c  ft_strmapi.c  ft_strncat.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  ft_strtrim.c  ft_tolower.c
4_kurs/System_programming/spl2/: CMakeLists.txt  input  input2  main.c  spl2.h
4_kurs/System_programming/spl2/libft/: Makefile  ft_cw.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstmap.c  ft_memalloc.c  ft_memmove.c  ft_sqrt.c  ft_strcmp.c  ft_strcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnew.c  ft_strsplit.c  ft_strstr.c  ft_toupper.c  libft.h
4_kurs/System_programming/spl3/: CMakeLists.txt  main.c  new_zminna.c  poopsLab2  spl3.h
4_kurs/System_programming/spl3/libft/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_lstdelone.c  ft_memccpy.c  ft_memchr.c  ft_memset.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strclr.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  (+8 more)
